--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -26,6 +26,7 @@
           class="btn btn-outline-light btn-sm"
           (click)="showHideImg()"
         >
+          <i class="{{ !showImg ? 'fa fa-eye' : 'fa fa-eye-slash' }}"></i>
           {{ !showImg ? "exibir" : "ocultar" }}
         </button>
       </th>
@@ -53,14 +54,16 @@
       <td>{{ evento.id }}</td>
       <td>{{ evento.tema }}</td>
       <td>{{ evento.local }}</td>
-      <td>{{ evento.dataEvento }}</td>
+      <td>{{ evento.dataEvento | DateFormatPipe }}</td>
       <td>{{ evento.qtdPessoas }}</td>
       <td>{{ evento.lotes[0].nome }}</td>
       <td>
-        <button type="button" class="btn btn-primary btn-sm mr-2">
-          Editar
+        <button type="button" class="btn btn-primary btn-sm mr-2" tooltip="Editar">
+          <i class="fa fa-edit"></i>
         </button>
-        <button type="button" class="btn btn-danger btn-sm">Excluir</button>
+        <button type="button" class="btn btn-danger btn-sm" tooltip="Excluir">
+          <i class="fa fa-trash"></i>
+        </button>
       </td>
     </tr>
   </tbody>
