Seção 7: .NET Core - P3 - Angular -Adicionando a modal.

--- a/Front/ProEventos-App/src/app/nav/nav.component.html
+++ b/Front/ProEventos-App/src/app/nav/nav.component.html
@@ -52,10 +52,10 @@
               <a class="dropdown-item" href="#"> Perfil </a>
               <div role="separator" class="divider"></div>
               <a class="dropdown-item" href="#"> Sair </a>
-            </div>
+            </div> 
           </li>
         </ul>
       </div>
     </div>
   </nav>
-</div>
+</div>2
