--- a/Front/ProEventos-App/src/app/eventos/eventos.component.html
+++ b/Front/ProEventos-App/src/app/eventos/eventos.component.html
@@ -58,10 +58,14 @@
       <td>{{ evento.qtdPessoas }}</td>
       <td>{{ evento.lotes[0].nome }}</td>
       <td>
-        <button type="button" class="btn btn-primary btn-sm mr-2" tooltip="Editar">
+        <button
+          type="button"
+          class="btn btn-primary btn-sm mr-2"
+          tooltip="Editar"
+        >
           <i class="fa fa-edit"></i>
         </button>
-        <button type="button" class="btn btn-danger btn-sm" tooltip="Excluir">
+        <button type="button" class="btn btn-danger btn-sm" tooltip="Excluir" (click)="openModal(template)">
           <i class="fa fa-trash"></i>
         </button>
       </td>
@@ -75,3 +79,16 @@
     </tr>
   </tfoot>
 </table>
+
+<!--##### Modal #####-->
+<ng-template #template>
+  <div class="modal-body text-center">
+    <p>Tem certeza que quer deletar este Evento?</p>
+    <button type="button" class="btn btn-default" (click)="confirm()">
+      Sim
+    </button>
+    <button type="button" class="btn btn-primary" (click)="decline()">
+      Não
+    </button>
+  </div>
+</ng-template>
