--- a/Front/ProEventos-App/src/app/shared/nav/nav.component.html
+++ b/Front/ProEventos-App/src/app/shared/nav/nav.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><strong>ProEventos</strong></a>
+      <a class="navbar-brand" routerLink="dashboard"><strong>ProEventos</strong></a>
       <button
         class="navbar-toggler"
         (click)="isCollapsed = !isCollapsed"
@@ -21,14 +21,14 @@
         id="navbarNav"
       >
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Eventos</a>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" aria-current="page" routerLink="eventos">Eventos</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Palestrantes</a>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="palestrantes">Palestrantes</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contatos</a>
+          <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" routerLink="contatos">Contatos</a>
           </li>
         </ul>
         <ul class="navbar-nav">
@@ -36,11 +36,11 @@
             <a
               dropdownToggle
               class="nav-link dropdown-toggle"
-              href="#"
               id="navbarDropdownMenuLink"
               data-toggle="dropdown"
               aria-haspopup="true"
               aria-expanded="false"
+              style="cursor: pointer;"
             >
               Roniel
             </a>
@@ -49,10 +49,10 @@
               class="dropdown-menu"
               aria-labelledby="navbarDropdownMenuLink"
             >
-              <a class="dropdown-item" href="#"> Perfil </a>
+              <a class="dropdown-item" routerLink="perfil"> Perfil </a>
               <div role="separator" class="divider"></div>
               <a class="dropdown-item" href="#"> Sair </a>
-            </div> 
+            </div>
           </li>
         </ul>
       </div>
