Seção 8: .NET Core - P1 - Angular - Melhorando o layout.

--- a/Front/ProEventos-App/src/app/shared/nav/nav.component.html
+++ b/Front/ProEventos-App/src/app/shared/nav/nav.component.html
@@ -1,6 +1,5 @@
-<div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+    <div class="container">
       <a class="navbar-brand" routerLink="dashboard"><strong>ProEventos</strong></a>
       <button
         class="navbar-toggler"
@@ -58,4 +57,3 @@
       </div>
     </div>
   </nav>
-</div>2
