--- a/Front/ProEventos-App/src/app/components/contatos/contatos.component.html
+++ b/Front/ProEventos-App/src/app/components/contatos/contatos.component.html
@@ -1,2 +1,4 @@
-<app-titulo [titulo]="'Contatos'"></app-titulo>
-
+<app-titulo
+  [titulo]="'Contatos'"
+  [iconClass]="'fas fa-address-book'"
+></app-titulo>
