--- a/Front/ProEventos-App/src/app/components/user/registration/registration.component.html
+++ b/Front/ProEventos-App/src/app/components/user/registration/registration.component.html
@@ -12,7 +12,7 @@
   </div>
 
   <div class="col-md-6">
-    <form class="p-1">
+    <form class="p-1" [formGroup]="frmRegistration">
       <div class="pb-2 d-block d-md-none">
         <h3 class="border-bottom">Cadastro de Usuário</h3>
       </div>
@@ -21,51 +21,129 @@
           <label>Primeiro Nome</label>
           <input
             type="text"
-            class="form-control"
+            formControlName="primeiroNome"
+            [ngClass]="{
+              'is-invalid': f.primeiroNome?.errors && f.primeiroNome?.touched
+            }"
+            class="form-control is-invalid"
             placeholder="Insira o Primeiro nome"
           />
+          <div
+            *ngIf="f.primeiroNome.errors?.required && f.primeiroNome?.touched"
+            class="invalid-feedback"
+          >
+            O Primeiro Nome é obrigatório.
+          </div>
         </div>
         <div class="form-group col-sm-6">
           <label>Último nome</label>
           <input
             type="text"
-            class="form-control"
+            formControlName="ultimoNome"
+            [ngClass]="{
+              'is-invalid': f.ultimoNome?.errors && f.ultimoNome?.touched
+            }"
+            class="form-control is-invalid"
             placeholder="Insira o Último nome"
           />
+          <div
+            *ngIf="f.ultimoNome.errors?.required && f.ultimoNome?.touched"
+            class="invalid-feedback"
+          >
+            O Último Nome é obrigatório.
+          </div>
         </div>
       </div>
       <div class="form-group">
         <label for="">Email:</label>
         <input
-          class="form-control"
           type="text"
-          placeholder="Insira o Nome Completo"
+          formControlName="email"
+          [ngClass]="{
+            'is-invalid': f.email?.errors && f.email?.touched
+          }"
+          class="form-control is-invalid"
+          placeholder="Insira o E-mail"
         />
+        <div
+          *ngIf="f.email.errors?.required && f.email?.touched"
+          class="invalid-feedback"
+        >
+          O E-mail é obrigatório.
+        </div>
+        <div
+          *ngIf="f.email.errors?.email && f.email?.touched"
+          class="invalid-feedback"
+        >
+          O e-mail informado é inválido.
+        </div>
       </div>
       <div class="form-group">
         <label for="">Usuário:</label>
         <input
-          class="form-control"
           type="text"
+          formControlName="userName"
+          [ngClass]="{
+            'is-invalid': f.userName?.errors && f.userName?.touched
+          }"
+          class="form-control is-invalid"
           placeholder="Insira o nome de Usuário"
         />
+        <div
+          *ngIf="f.userName.errors?.required && f.userName?.touched"
+          class="invalid-feedback"
+        >
+          O Usuário é obrigatório.
+        </div>
       </div>
       <div class="form-row">
         <div class="form-group col-sm-6">
           <label for="">Senha:</label>
           <input
-            class="form-control"
             type="password"
+            formControlName="senha"
+            [ngClass]="{
+              'is-invalid': f.senha?.errors && f.senha?.touched
+            }"
+            class="form-control is-invalid"
             placeholder="Digite uma Senha"
           />
+          <div
+            *ngIf="f.senha.errors?.required && f.senha?.touched"
+            class="invalid-feedback"
+          >
+            A Senha é obrigatório.
+          </div>
+          <div
+            *ngIf="f.senha.errors?.minlength && f.senha?.touched"
+            class="invalid-feedback"
+          >
+            A Senha deve ter no mínimo 6 caracteres.
+          </div>
         </div>
         <div class="form-group col-sm-6">
           <label for="">Confirmar Senha:</label>
           <input
-            class="form-control"
             type="password"
+            formControlName="confirmeSenha"
+            [ngClass]="{
+              'is-invalid': f.confirmeSenha?.errors && f.confirmeSenha?.touched
+            }"
+            class="form-control is-invalid"
             placeholder="Confirme a Senha"
           />
+          <div
+            *ngIf="f.confirmeSenha.errors?.required && f.confirmeSenha?.touched"
+            class="invalid-feedback"
+          >
+            É obrigatório confirmar a senha.
+          </div>
+          <div
+            *ngIf="f.confirmeSenha.errors?.mustMatch && f.confirmeSenha?.touched"
+            class="invalid-feedback"
+          >
+            As senhas não são iguais.
+          </div>
         </div>
       </div>
       <div class="form-row p-1 mb-3">
@@ -82,14 +160,19 @@
       </div>
       <div class="form-row">
         <div class="form-group col-12">
-          <button class="btn btn-lg btn-success btn-block px-5">
+          <button
+            class="btn btn-lg btn-success btn-block px-5"
+            [disabled]="!frmRegistration.valid"
+          >
             Registar
           </button>
         </div>
       </div>
       <div class="form-row">
         <div class="form-group col-12">
-          <a class="btn btn-link btn-block" routerLink="/user/login"> Já sou Cadastrado </a>
+          <a class="btn btn-link btn-block" routerLink="/user/login">
+            Já sou Cadastrado
+          </a>
         </div>
       </div>
     </form>
