--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -7,9 +7,7 @@
           <input
             type="text"
             class="form-control is-invalid"
-            [ngClass]="{
-              'is-invalid': f.tema?.errors && f.tema?.touched
-            }"
+            [ngClass]="cssValidator(f.tema)"
             formControlName="tema"
             placeholder="Informem o Tema."
           />
@@ -39,9 +37,7 @@
           <input
             type="text"
             class="form-control is-invalid"
-            [ngClass]="{
-              'is-invalid': f.local?.errors && f.local?.touched
-            }"
+            [ngClass]="cssValidator(f.local)"
             formControlName="local"
             placeholder="Informem o Local."
           />
@@ -57,12 +53,11 @@
           <input
             type="datetime"
             class="form-control is-invalid"
-            [ngClass]="{
-              'is-invalid':
-                f.dataHoraEvento?.errors && f.dataHoraEvento?.touched
-            }"
+            [ngClass]="cssValidator(f.dataHoraEvento)"
             formControlName="dataHoraEvento"
             placeholder="Informem a Data e Hora."
+            bsDatepicker
+            [bsConfig]="ngConfig"
           />
           <div
             *ngIf="
@@ -80,9 +75,7 @@
           <input
             type="number"
             class="form-control is-invalid"
-            [ngClass]="{
-              'is-invalid': f.qtdPessoas?.errors && f.qtdPessoas?.touched
-            }"
+            [ngClass]="cssValidator(f.qtdPessoas)"
             formControlName="qtdPessoas"
             placeholder="Informem a Quantidade de Pessoas."
           />
@@ -104,9 +97,7 @@
           <input
             type="text"
             class="form-control is-invalid"
-            [ngClass]="{
-              'is-invalid': f.telefone?.errors && f.telefone?.touched
-            }"
+            [ngClass]="cssValidator(f.telefone)"
             formControlName="telefone"
             placeholder="(000) 90000-0000"
           />
@@ -122,9 +113,7 @@
           <input
             type="text"
             class="form-control is-invalid"
-            [ngClass]="{
-              'is-invalid': f.email?.errors && f.email?.touched
-            }"
+            [ngClass]="cssValidator(f.email)"
             formControlName="email"
             placeholder="Informem o E-mail."
           />
@@ -146,9 +135,7 @@
           <input
             type="text"
             class="form-control is-invalid"
-            [ngClass]="{
-              'is-invalid': f.imagemURL?.errors && f.imagemURL?.touched
-            }"
+            [ngClass]="cssValidator(f.imagemURL)"
             formControlName="imagemURL"
             placeholder="Informem a Imagem URL."
           />
