--- a/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
@@ -68,7 +68,7 @@
         <td class="d-none d-md-table-cell">{{ evento.local }}</td>
         <td>{{ evento.dataEvento | DateFormatPipe }}</td>
         <td class="d-none d-md-table-cell">{{ evento.qtdPessoas }}</td>
-        <td>{{ evento.lotes[0].nome }}</td>
+        <td>{{ evento.lotes[0]?.nome | uppercase}}</td>
         <td>
           <button
             type="button"
