--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -56,6 +56,7 @@
             [ngClass]="cssValidator(f.dataHoraEvento)"
             formControlName="dataHoraEvento"
             placeholder="Informem a Data e Hora."
+            value="{{ evento.dataEvento | DateFormatPipe }}"
             bsDatepicker
             [bsConfig]="ngConfig"
           />
