--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -1,33 +1,26 @@
 <div class="card rounded shadow-sm">
-  <form [formGroup]="frmEventoDetalhe">
+  <form [formGroup]="form">
     <div class="p-3">
+      <!-- <p>Form value: {{form.value | json}}</p>
+      <p>Form valid: {{form.status | json}}</p> -->
       <div class="form-row">
         <div class="form-group col-md-12">
           <label>Tema</label>
           <input
             type="text"
-            class="form-control is-invalid"
+            class="form-control"
             [ngClass]="cssValidator(f.tema)"
             formControlName="tema"
-            placeholder="Informem o Tema."
+            placeholder="Insira o Tema"
           />
-          <div
-            *ngIf="f.tema.errors?.required && f.tema?.touched"
-            class="invalid-feedback"
-          >
-            O tema é obrigatório.
+          <div *ngIf="f.tema.errors?.required" class="invalid-feedback">
+            Tema é obrigatório.
           </div>
-          <div
-            *ngIf="f.tema.errors?.minlength && f.tema?.touched"
-            class="invalid-feedback"
-          >
-            O tema deve ter no mínimo 4 caracteres.
+          <div *ngIf="f.tema.errors?.minlength" class="invalid-feedback">
+            Tema deve ter no mínimo 4 caracteres.
           </div>
-          <div
-            *ngIf="f.tema.errors?.maxlength && f.tema?.touched"
-            class="invalid-feedback"
-          >
-            O tema deve ter no máximo 50 caracteres.
+          <div *ngIf="f.tema.errors?.maxlength" class="invalid-feedback">
+            Tema deve ter no máximo 50 caracteres.
           </div>
         </div>
       </div>
@@ -36,37 +29,35 @@
           <label>Local</label>
           <input
             type="text"
-            class="form-control is-invalid"
+            class="form-control"
             [ngClass]="cssValidator(f.local)"
             formControlName="local"
-            placeholder="Informem o Local."
+            placeholder=""
           />
           <div
-            *ngIf="f.local.errors?.required && f.local?.touched"
+            *ngIf="f.local.errors?.required && f.local.touched"
             class="invalid-feedback"
           >
-            O local é obrigatório.
+            Local é obrigatório.
           </div>
         </div>
         <div class="form-group col-md-4">
           <label>Data e Hora</label>
           <input
             type="datetime"
-            class="form-control is-invalid"
-            [ngClass]="cssValidator(f.dataHoraEvento)"
-            formControlName="dataHoraEvento"
-            placeholder="Informem a Data e Hora."
+            class="form-control"
+            [ngClass]="cssValidator(f.dataEvento)"
             value="{{ evento.dataEvento | DateFormatPipe }}"
             bsDatepicker
-            [bsConfig]="ngConfig"
+            [bsConfig]="bsConfig"
+            formControlName="dataEvento"
+            placeholder=""
           />
           <div
-            *ngIf="
-              f.dataHoraEvento.errors?.required && f.dataHoraEvento?.touched
-            "
+            *ngIf="f.dataEvento.errors?.required && f.dataEvento.touched"
             class="invalid-feedback"
           >
-            A data e hora são obrigatórios.
+            Data e Hora é obrigatório.
           </div>
         </div>
       </div>
@@ -75,76 +66,76 @@
           <label>Qtd Pessoas</label>
           <input
             type="number"
-            class="form-control is-invalid"
+            class="form-control"
             [ngClass]="cssValidator(f.qtdPessoas)"
             formControlName="qtdPessoas"
-            placeholder="Informem a Quantidade de Pessoas."
+            placeholder=""
           />
           <div
-            *ngIf="f.qtdPessoas.errors?.required && f.qtdPessoas?.touched"
+            *ngIf="f.qtdPessoas.errors?.required && f.qtdPessoas.touched"
             class="invalid-feedback"
           >
-            A quantidade de pessoas é obrigatória.
+            Qtd Pessoas é obrigatório.
           </div>
           <div
-            *ngIf="f.qtdPessoas.errors?.max && f.qtdPessoas?.touched"
+            *ngIf="f.qtdPessoas.errors?.max && f.qtdPessoas.touched"
             class="invalid-feedback"
           >
-            A quantidade de pessoas não pode ser mais que 1000.
+            Qtd Pessoas deve ser menor que 120000.
           </div>
         </div>
         <div class="form-group col-md-2">
           <label>Telefone</label>
           <input
             type="text"
-            class="form-control is-invalid"
+            class="form-control"
             [ngClass]="cssValidator(f.telefone)"
             formControlName="telefone"
             placeholder="(000) 90000-0000"
           />
           <div
-            *ngIf="f.telefone.errors?.required && f.telefone?.touched"
+            *ngIf="f.telefone.errors?.required && f.telefone.touched"
             class="invalid-feedback"
           >
-            O telefone é obrigatório.
+            Telefone é obrigatório.
           </div>
         </div>
         <div class="form-group col-md-4">
-          <label>E-mail</label>
+          <label>e-mail</label>
           <input
             type="text"
-            class="form-control is-invalid"
+            class="form-control"
             [ngClass]="cssValidator(f.email)"
             formControlName="email"
-            placeholder="Informem o E-mail."
+            placeholder="e-mail"
           />
           <div
-            *ngIf="f.email.errors?.required && f.email?.touched"
+            *ngIf="f.email.errors?.required && f.email.touched"
             class="invalid-feedback"
           >
-            O e-mail é obrigatório.
+            e-mail é obrigatório.
           </div>
           <div
-            *ngIf="f.email.errors?.email && f.email?.touched"
+            *ngIf="f.email.errors?.email && f.email.touched"
             class="invalid-feedback"
           >
-            O e-mail informado é inválido.
+            Deve ser um endereço de e-mail válido
           </div>
         </div>
         <div class="form-group col-md-4">
           <label>Imagem</label>
           <input
             type="text"
-            class="form-control is-invalid"
+            class="form-control"
             [ngClass]="cssValidator(f.imagemURL)"
             formControlName="imagemURL"
-            placeholder="Informem a Imagem URL."
+            placeholder="imagem"
           />
           <div
-            *ngIf="f.imagemURL.errors?.required && f.imagemURL?.touched"
+            *ngIf="f.imagemURL.errors?.required && f.imagemURL.touched"
             class="invalid-feedback"
           >
-            A imagem URL é obrigatória.
+            Imagem é obrigatório.
           </div>
         </div>
       </div>
@@ -157,8 +148,12 @@
         >
           Cancelar Alteração
         </button>
-        <button class="btn btn-success" [disabled]="!frmEventoDetalhe.valid">
-          <!--span class="spinner-border spinner-border-sm mr-1"></!--span-->
+        <button
+          class="btn btn-success"
+          [disabled]="!form.valid"
+          (click)="salvarAlteracao()"
+        >
+          <!-- <span class="spinner-border spinner-border-sm mr-1"></span> -->
           Salvar Evento
         </button>
       </div>
