--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -151,7 +151,7 @@
         <button
           class="btn btn-success"
           [disabled]="!form.valid"
-          (click)="salvarAlterarEvento()"
+          (click)="salvarEvento()"
         >
           Salvar Evento
         </button>
@@ -169,6 +169,10 @@
 
 <!--Cadastro de Lotes-->
 <div class="card rounded shadow-sm mt-4">
+  <!--<div class="card rounded shadow-sm mt-4" *ngIf="modoEditar">-->
+  <p>Form value: {{ form.controls.lotes.value | json }}</p>
+  <p>Form valid: {{ form.controls.lotes.status | json }}</p>
+
   <div class="p-3">
     <div class="d-flex border-bottom">
       <h2 class="mr-auto">Lotes do Evento</h2>
@@ -176,14 +180,15 @@
         <i class="fas fa-money-bill-wave"></i>
       </h2>
     </div>
+
     <p>Clique em Lote para adicionar e preencher novos Lotes</p>
     <div class="form-row p-1">
-      <div class="col">
+      <div [formGroup]="form" class="col">
         <div
           formArrayName="lotes"
           *ngFor="let lote of lotes.controls; let i = index"
         >
-          <fieldset class="form-group">
+          <fieldset [formGroupName]="i" class="form-group">
             <legend class="d-flex justify-content-between capitalize">
               <button
                 class="p-2 btn btn-sm btn-outline-warning mb-1 d-flex"
@@ -200,6 +205,7 @@
               <div class="form-group col-md-4">
                 <label>Nome</label>
                 <input
+                  [ngClass]="cssValidator(lotes.get(i + '.nome'))"
                   type="text"
                   class="form-control"
                   formControlName="nome"
@@ -209,6 +215,7 @@
               <div class="form-group col-md-4">
                 <label>Quantidade</label>
                 <input
+                  [ngClass]="cssValidator(lotes.get(i + '.quantidade'))"
                   type="text"
                   class="form-control"
                   formControlName="quantidade"
@@ -219,6 +226,7 @@
                 <label>Preço</label>
                 <input
                   type="text"
+                  [ngClass]="cssValidator(lotes.get(i + '.preco'))"
                   currencyMask
                   class="form-control"
                   formControlName="preco"
@@ -258,7 +266,10 @@
       <button class="btn btn-outline-secondary mr-auto border">
         Cancelar Alteração
       </button>
-      <button class="btn btn-success">Salvar Lotes</button>
+      <button (click)="salvarLotes()" class="btn btn-success">
+        Salvar Lotes
+      </button>
     </div>
   </div>
 </div>
+<br />
