--- a/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
@@ -1,4 +1,4 @@
-<div class="card rounded shadow-sm p-3">
+<div class="card round shadow-sm p-3">
   <div class="d-flex">
     <div class="flex-fill pr-3">
       <div class="input-group mb-2">
@@ -66,7 +66,7 @@
         <td>{{ evento.id }}</td>
         <td>{{ evento.tema }}</td>
         <td class="d-none d-md-table-cell">{{ evento.local }}</td>
-        <td>{{ evento.dataEvento }}</td>
+        <td>{{ evento.dataEvento | DateFormatPipe }}</td>
         <td class="d-none d-md-table-cell">{{ evento.qtdPessoas }}</td>
         <td>{{ evento.lotes[0]?.nome | uppercase }}</td>
         <td>
