--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -47,7 +47,7 @@
             type="datetime"
             class="form-control"
             [ngClass]="cssValidator(f.dataEvento)"
-            value="{{ evento.dataEvento | DateFormatPipe}}"
+            value="{{ evento.dataEvento | DateFormatPipe }}"
             bsDatepicker
             [bsConfig]="bsConfig"
             formControlName="dataEvento"
@@ -156,7 +156,7 @@
           Salvar Evento
         </button>
 
-        <div style="margin-left: 5px">
+        <div style="margin-left: 5px" *ngIf="modoEditar">
           <button class="btn btn-outline-primary" routerLink="/eventos/detalhe">
             <i class="fa fa-plus-circle my-1"></i>
             Novo
@@ -168,10 +168,10 @@
 </div>
 
 <!--Cadastro de Lotes-->
-<div class="card rounded shadow-sm mt-4">
-  <!--<div class="card rounded shadow-sm mt-4" *ngIf="modoEditar">-->
-  <p>Form value: {{ form.controls.lotes.value | json }}</p>
-  <p>Form valid: {{ form.controls.lotes.status | json }}</p>
+<div class="card rounded shadow-sm mt-4" *ngIf="modoEditar">
+
+  <!-- <p>Form value: {{ form.controls.lotes.value | json }}</p>
+  <p>Form valid: {{ form.controls.lotes.status | json }}</p> -->
 
   <div class="p-3">
     <div class="d-flex border-bottom">
