--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -240,6 +240,8 @@
                   class="form-control"
                   formControlName="dataInicio"
                   placeholder="01/01/2019"
+                  bsDatepicker
+                  (bsValueChange)="mudarValorData($event, i, 'dataInicio')"
                 />
               </div>
               <div class="form-group col-md-4">
@@ -249,6 +251,8 @@
                   class="form-control"
                   formControlName="dataFim"
                   placeholder="01/01/2019"
+                  bsDatepicker
+                  (bsValueChange)="mudarValorData($event, i, 'dataFim')"
                 />
               </div>
             </div>
