--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -189,6 +189,7 @@
         >
           <fieldset [formGroupName]="i" class="form-group">
             <legend class="d-flex justify-content-between capitalize">
+              {{ retornaTituloLote(lotes.get(i + ".nome").value) }}
               <button
                 (click)="removerLote(template, i)"
                 class="p-2 btn btn-sm btn-outline-warning mb-1 d-flex"
@@ -228,6 +229,7 @@
                   type="text"
                   [ngClass]="cssValidator(lotes.get(i + '.preco'))"
                   currencyMask
+                  [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',', align: 'left'}"
                   class="form-control"
                   formControlName="preco"
                   placeholder="R$ 0,00"
@@ -270,7 +272,11 @@
       <button class="btn btn-outline-secondary mr-auto border">
         Cancelar Alteração
       </button>
-      <button (click)="salvarLotes()" class="btn btn-success">
+      <button
+        [disabled]="!form.controls.lotes.valid"
+        (click)="salvarLotes()"
+        class="btn btn-success"
+      >
         Salvar Lotes
       </button>
     </div>
