Seção 12: .NET e Angular - P1 - Upload de Imagens.

--- a/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-lista/evento-lista.component.html
@@ -57,7 +57,7 @@
           <img
             [collapse]="!showImg"
             [isAnimated]="true"
-            src="/assets/{{ evento.imagemURL }}"
+            [src]="exibirImagem(evento.imagemURL)"
             alt="Imagem do evento"
             [style.width.px]="widthIMG"
             [style.margin.px]="marginIMG"
