--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.scss
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.scss
@@ -1,3 +1,4 @@
+
 .iconesSociais {
   color: rgb(94, 94, 94);
 }
@@ -20,4 +21,17 @@
   position: sticky;
   --default-height: 25px;
   top: var(--default-height);
+}
+
+.card-evento-view {
+  position: sticky;
+  top: 10px;
+}
+
+.card-img-block {
+  img {
+    cursor: pointer;
+    border-radius: 3px 3px 0 0;
+    width: 100%;
+  }
 }
