--- a/Front/ProEventos-App/src/app/shared/nav/nav.component.html
+++ b/Front/ProEventos-App/src/app/shared/nav/nav.component.html
@@ -1,9 +1,6 @@
-<nav
-  class="navbar navbar-expand-lg navbar-light bg-white shadow-sm"
-  *ngIf="showMenu()"
->
+<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
   <div class="container">
-    <a class="navbar-brand" routerLink="dashboard">
+    <a class="navbar-brand" routerLink="dashboard" tooltip="ProEventos">
       <i class="fa fa-users mb-2"></i>
     </a>
     <button
@@ -18,7 +15,9 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div
+      *ngIf="showMenu()"
       class="collapse navbar-collapse"
       [collapse]="isCollapsed"
       [isAnimated]="true"
@@ -37,6 +36,7 @@
           <a class="nav-link" routerLink="contatos">Contatos</a>
         </li>
       </ul>
+
       <ul class="navbar-nav">
         <li class="nav-item dropdown" dropdown>
           <a
