--- a/Front/ProEventos-App/src/app/components/user/login/login.component.html
+++ b/Front/ProEventos-App/src/app/components/user/login/login.component.html
@@ -5,16 +5,17 @@
       <h1 class="h3 mb-3 font-weight-normal">Entrar com</h1>
 
       <div>
-        <label for="username" class="sr-only">Usuário</label>
+        <label for="userName" class="sr-only">Usuário</label>
         <input
           type="text"
           formControlName="userName"
-          id="username"
+          id="userName"
           class="form-control"
           placeholder="Usuário"
-          name="username"
+          name="userName"
           required
           [ngClass]="cssValidator(f.userName)"
+          [(ngModel)]="model.userName"
         />
         <div *ngIf="f.userName.errors?.required" class="invalid-feedback">
           O usuário é obrigatório.
@@ -32,6 +33,7 @@
           name="password"
           required
           [ngClass]="cssValidator(f.password)"
+          [(ngModel)]="model.password"
         />
         <div *ngIf="f.password.errors?.required" class="invalid-feedback">
           O password é obrigatório.
@@ -45,6 +47,7 @@
         class="btn btn-lg btn-primary btn-block"
         type="submit"
         [disabled]="!frmLogin.valid"
+        (click)="realizarLogin()"
       >
         Entrar
       </button>
