Seção 13: Angular e .NET - P4 - Header de Autenticação.

--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -303,7 +303,7 @@
     </div>
   </div>
 
-  <!-- Card Lateral -->
+  <!-- Card Lateral imagem -->
   <div class="col-md-4" *ngIf="modoEditar">
     <div [formGroup]="form" class="card-evento-view shadow-sm">
       <div class="form-row">
