--- a/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
+++ b/Front/ProEventos-App/src/app/components/eventos/evento-detalhe/evento-detalhe.component.html
@@ -98,6 +98,7 @@
                 [ngClass]="cssValidator(f.telefone)"
                 formControlName="telefone"
                 placeholder="(000) 90000-0000"
+                mask="(XXX) XXXXX-XXXX"
                 [(ngModel)]="evento.telefone"
               />
               <div
